Fixed expand/collapse in page field modal

--- a/core/Piranha.Manager/assets/src/scss/inc/_sitemap.scss
+++ b/core/Piranha.Manager/assets/src/scss/inc/_sitemap.scss
@@ -60,12 +60,18 @@
     }
 
     .link {
+        display: flex;
         flex-grow: 1;
 
+        .actions {
+            display: inline-block;
+            width: 1.5rem;
+        }
+
         a {
-            display: block;
             font-family: "Open Sans", sans-serif;
             font-size: 1rem;
+            flex-grow: 1;
         }
     }
 }
